--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "prg-validator",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Isomorphic Validation framework",
-  "main": "src/index.js",
+  "main": "main.js",
   "scripts": {
     "doc": "node ./bin/makeApiDoc.js",
     "test": "npm run test:lint && npm run test:coverage && npm run test:coverage:threshold",
