--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prg-validator",
-  "version": "0.4.0-pre2",
+  "version": "0.4.0",
   "description": "Isomorphic Validation framework",
   "main": "main.js",
   "scripts": {
